it is the begin

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-react": "^0.12.2",
-    "jquery": "^2.1.4"
+    "jquery": "^2.1.4",
+    "holderjs": "^2.9.3"
   },
   "browser": {
     "jquery": "./node_modules/jquery/dist/jquery.min.js",
