--- a/package.json
+++ b/package.json
@@ -9,24 +9,26 @@
   "author": "mrhop <233402923@qq.com>",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "babelify": "^7.2.0",
     "bootstrap-sass": "^3.3.5",
-    "browserify": "^11.0.1",
-    "browserify-shim": "^3.8.10",
-    "grunt": "^0.4.5",
-    "grunt": "^0.4.5",
-    "grunt-browserify": "^4.0.0",
-    "grunt-contrib-compass": "^1.0.3",
-    "grunt-contrib-copy": "^0.8.1",
-    "grunt-contrib-uglify": "^0.9.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-react": "^0.12.2",
+    "envify": "^3.4.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-browserify": "^0.5.1",
+    "gulp-compass": "^2.1.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-streamify": "^1.0.2",
+    "gulp-uglify": "^1.5.3",
+    "holderjs": "^2.9.3",
     "jquery": "^2.1.4",
-    "holderjs": "^2.9.3"
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "reactify": "^1.1.1"
   },
   "browser": {
     "jquery": "./node_modules/jquery/dist/jquery.min.js",
     "bootstrap": "./node_modules/bootstrap-sass/assets/javascripts/bootstrap.min.js",
     "utilFun": "./public/js/dev/self/utilFun.js"
-  },
-  "browserify-shim": "./public/js/dev/self/shims.js"
+  }
 }
