--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "license": "ISC",
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
-    "babelify": "^7.2.0",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.3.0",
     "bootstrap-sass": "^3.3.5",
-    "envify": "^3.4.0",
+    "browserify": "^13.0.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-browserify": "^0.5.1",
+    "gulp-cached": "^1.1.0",
     "gulp-compass": "^2.1.0",
+    "gulp-foreach": "^0.1.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.5.3",
@@ -24,7 +25,8 @@
     "jquery": "^2.1.4",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
-    "reactify": "^1.1.1"
+    "react-intl": "^2.1.1",
+    "vinyl-source-stream": "^1.1.0"
   },
   "browser": {
     "jquery": "./node_modules/jquery/dist/jquery.min.js",
