--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "browserify": "^13.0.0",
     "gulp": "^3.9.1",
     "gulp-cached": "^1.1.0",
+    "gulp-clean": "^0.3.2",
     "gulp-compass": "^2.1.0",
     "gulp-foreach": "^0.1.0",
     "gulp-minify-css": "^1.2.4",
