--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   "author": "mrhop <233402923@qq.com>",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.8.0",
+    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.3.0",
     "bootstrap-sass": "^3.3.5",
     "browserify": "^13.0.0",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
     "gulp": "^3.9.1",
     "gulp-cached": "^1.1.0",
     "gulp-clean": "^0.3.2",
@@ -23,11 +28,18 @@
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.5.3",
     "holderjs": "^2.9.3",
+    "image-webpack-loader": "^1.8.0",
     "jquery": "^2.1.4",
+    "node-sass": "^3.7.0",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-hot-loader": "^1.3.0",
     "react-intl": "^2.1.1",
-    "vinyl-source-stream": "^1.1.0"
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "vinyl-source-stream": "^1.1.0",
+    "webpack": "^1.13.0"
   },
   "browser": {
     "jquery": "./node_modules/jquery/dist/jquery.min.js",
