--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server --progress --colors",
+    "build": "webpack -p"
   },
   "author": "mrhop <233402923@qq.com>",
   "license": "ISC",
@@ -13,20 +14,11 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "babelify": "^7.3.0",
     "bootstrap-sass": "^3.3.5",
-    "browserify": "^13.0.0",
+    "copy-webpack-plugin": "^2.1.3",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
-    "gulp": "^3.9.1",
-    "gulp-cached": "^1.1.0",
-    "gulp-clean": "^0.3.2",
-    "gulp-compass": "^2.1.0",
-    "gulp-foreach": "^0.1.0",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-streamify": "^1.0.2",
-    "gulp-uglify": "^1.5.3",
     "holderjs": "^2.9.3",
     "image-webpack-loader": "^1.8.0",
     "jquery": "^2.1.4",
@@ -38,12 +30,6 @@
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "vinyl-source-stream": "^1.1.0",
     "webpack": "^1.13.0"
-  },
-  "browser": {
-    "jquery": "./node_modules/jquery/dist/jquery.min.js",
-    "bootstrap": "./node_modules/bootstrap-sass/assets/javascripts/bootstrap.min.js",
-    "utilFun": "./public/js/dev/self/utilFun.js"
   }
 }
