--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "image-webpack-loader": "^1.8.0",
     "node-sass": "^3.7.0",
     "react": "^15.0.1",
+    "react-custom-scrollbars": "^4.0.0-beta.1",
     "react-dom": "^15.0.1",
     "react-hot-loader": "^1.3.0",
     "react-intl": "^2.1.1",
