--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
     "bootstrap-sass": "^3.3.5",
+    "classnames": "^2.2.5",
     "copy-webpack-plugin": "^2.1.3",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
