--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-dom": "^15.0.1",
     "react-hot-loader": "^1.3.0",
     "react-intl": "^2.1.1",
+    "react-scroll": "^1.0.16",
+    "rebound": "0.0.13",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
