--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "holderjs": "^2.9.3",
     "image-webpack-loader": "^1.8.0",
     "node-sass": "^3.7.0",
+    "rc-menu": "^4.12.3",
     "react": "^15.0.1",
     "react-custom-scrollbars": "^4.0.0-beta.1",
     "react-dom": "^15.0.1",
