--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.0"
+  },
+  "dependencies": {
+    "react-select": "^1.0.0-beta13"
   }
 }
