--- a/.eslintrc
+++ b/.eslintrc
@@ -17,8 +17,8 @@
     "camelcase": 2,
     "curly": 2,
     "brace-style": [2, "1tbs"],
-    "quotes": [2, "single"],
-    "semi": [2, "always"],
+    //"quotes": [2, "single"]
+    //"semi": [2, "always"],
     "space-infix-ops": 2
   }
 }
