--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "humps": "^1.1.0",
     "image-webpack-loader": "^1.8.0",
     "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.13.1",
     "merge": "^1.2.0",
     "node-sass": "^3.7.0",
     "normalizr": "^2.1.0",
