--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "rc-menu": "^4.12.3",
     "react": "^15.0.1",
     "react-custom-scrollbars": "^4.0.0-beta.1",
+    "react-d3": "^0.4.0",
     "react-dom": "^15.0.1",
     "react-hot-loader": "^1.3.0",
     "react-intl": "^2.1.1",
