--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "classnames": "^2.2.5",
     "copy-webpack-plugin": "^2.1.3",
     "css-loader": "^0.23.1",
+    "d3": "^3.5.17",
+    "element-resize-event": "^2.0.5",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
@@ -33,9 +35,9 @@
     "node-sass": "^3.7.0",
     "normalizr": "^2.1.0",
     "rc-menu": "^4.12.3",
+    "rd3": "^0.6.5",
     "react": "^15.0.1",
     "react-custom-scrollbars": "^4.0.0-beta.1",
-    "react-d3": "^0.4.0",
     "react-dom": "^15.0.1",
     "react-hot-loader": "^1.3.0",
     "react-intl": "^2.1.1",
