--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "rd3": "^0.6.5",
     "react": "^15.0.1",
     "react-custom-scrollbars": "^4.0.0-beta.1",
+    "react-datepicker": "^0.28.2",
     "react-dom": "^15.0.1",
     "react-hot-loader": "^1.3.0",
     "react-intl": "^2.1.1",
